fix: Force-wrap super long words in `InfoHero` and `GridBlock__item` titles

--- a/src/scss/GridBlocks.scss
+++ b/src/scss/GridBlocks.scss
@@ -47,6 +47,8 @@
 		position: relative; // as offset for the __titlelink::before hit-area
 		@include SubheadingStyle--large();
 		margin-bottom: grid-units(2);
+		word-break: break-word;
+		overflow-wrap: break-word;
 	}
 	.GridBlocks__item__titlelink {
 	}
